# bandit-deprecated-

./: .testcrc.txt.swo  Cargo.toml  build.rs
src/: lanczos.rs  main.rs  mod.rs
src/algo/: grayscale.rs  lanczos.rs  mod.rs
src/img/: cnc.rs  crc  crc.c  crc.h  main  main.c  mod.rs  parse.rs  simple.rs
