[package]
name = "bandit"
version = "0.1.0"
authors = ["<stdev17@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
tokio = { version = "0.2", features = ["fs"] }
crc = "1.8.1"
libflate = "0.1.27"
flate2 = "1.0"
libc = "0.2.66"

[build-dependencies]
cc = "1.0.50"